--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
+    "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^6.4.8",
     "next": "15.2.3",
     "react": "^19.0.0",
