--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^6.4.8",
+    "@tailwindcss/postcss": "^4.1.11",
+    "lucide-react": "^0.536.0",
     "next": "15.2.3",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.86.0"
+    "sass": "^1.86.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
