--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^6.4.8",
     "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
     "next": "15.2.3",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sass": "^1.86.0",
+    "TagCloud": "^2.5.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
